# Video_platform

./: README.md
GB28181VideoPlatform/app/: CMakeLists.txt  build.gradle
GB28181VideoPlatform/app/release/: output.json
GB28181VideoPlatform/app/src/androidTest/java/com/example/gb28181_videoplatform/: ExampleInstrumentedTest.java
GB28181VideoPlatform/app/src/main/: AndroidManifest.xml
GB28181VideoPlatform/app/src/main/assets/: logback.xml
GB28181VideoPlatform/app/src/main/cpp/: AndriodAppCpp.cpp  MediaDecoder.cpp  MediaDecoder.h  MediaPSAnalysis.cpp  MediaPSAnalysis.h  NALDecoder.h  PSDemux.cpp  PSDemux.h  PullMediaStream.cpp  PullMediaStream.h  PullMediaStreamParam.h.bak  PushH264Stream.cpp  PushH264Stream.h  RtpRecvData.cpp  RtpRecvData.h  RtpRecvDataBase.cpp  RtpRecvDataBase.h  RtpRecvDataFactory.cpp  RtpRecvDataFactory.h  RtpRecvPSData.cpp  RtpRecvPSData.h  RtpSender.cpp  RtpSender.h  StreamDef.h  UserArguments.h  g711.c  g711.h  litets.h  log.h  main.cpp  misc.c  native-lib.cpp  pch.h  pes.c  pes.c.bak  ps_demux.c  ps_stream.c  ring_buffer_s.cpp  ring_buffer_s.h  spin_mutex.cpp  (+5 more)
GB28181VideoPlatform/app/src/main/cpp/include/jrtplib/: rtpconfig.h
GB28181VideoPlatform/app/src/main/java/com/example/gb28181_videoplatform/: JNIBridge.java
GB28181VideoPlatform/app/src/main/java/com/example/gb28181_videoplatform/activity/: BaseActivity.java  LiveVideoActivity.java  LoginActivity.java  MainActivity.java  NVRAisleDeviceActivity.java  PlaybackVideoActivity.java  PushActivity.java  SearchDeviceActivity.java  SettingPwdActivity.java  WelcomeActivity.java
GB28181VideoPlatform/app/src/main/java/com/example/gb28181_videoplatform/adapter/: DeviceAdapter.java  TagAdapter.java  (+2 more)
GB28181VideoPlatform/app/src/main/res/drawable/: bg_input_cursor.xml  edit_round.xml  exit_btn.xml  flow_text_bg.xml  frame_layout.xml  layer_launcher.xml  list_img.xml  playback_act_btn.xml  playback_btn_offline.xml  playback_btn_online.xml  round_image_view.xml  round_rectangle_bg.xml  search_edit_round.xml  selector_password_show_or_hide.xml  setting_btn_view.xml  shape_btn.xml  shape_corner.xml  text_corner.xml  textcolor_selector.xml  time_click.xml
GB28181VideoPlatform/app/src/main/res/layout/: activity_base.xml  activity_live_video.xml  activity_login.xml  activity_main.xml  activity_nvraisle_device.xml  activity_playback_video.xml  activity_push.xml  activity_search_device.xml  activity_setting_pwd.xml  activity_welcome.xml  date_searcher_view.xml  device_list_item.xml  dialog_layout.xml  exit_dialog_layout.xml  flow_item_view.xml  flow_layout_state.xml  flow_layout_type.xml  fragment_common.xml  login_lay.xml  login_layout.xml  main_layout.xml  nav_header_main.xml  password_layout.xml  setting_layout.xml  stream_dlg_view.xml  time_item_view.xml  video_land_layout.xml
GB28181VideoPlatform/app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
GB28181VideoPlatform/app/src/test/java/com/example/gb28181_videoplatform/: ExampleUnitTest.java
(+77 files in other folders)
